[gd_scene load_steps=4 format=3 uid="uid://bqplqy3jgx4h7"]

[ext_resource type="Script" uid="uid://dgsdhmgnltntd" path="res://scenes/menu_and_splash/init_scene.gd" id="1_rgfxs"]
[ext_resource type="Script" uid="uid://d1oifvro55p4" path="res://addons/GodotPlayGameServices/scripts/sign_in/sign_in_client.gd" id="2_57ljm"]
[ext_resource type="Script" uid="uid://cinc8mj62kgsh" path="res://addons/GodotPlayGameServices/scripts/snapshots/snapshots_client.gd" id="3_357jq"]

[node name="InitScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rgfxs")

[node name="PlayGamesSignInClient" type="Node" parent="."]
script = ExtResource("2_57ljm")
metadata/_custom_type_script = "uid://d1oifvro55p4"

[node name="PlayGamesSnapshotsClient" type="Node" parent="."]
script = ExtResource("3_357jq")
metadata/_custom_type_script = "uid://cinc8mj62kgsh"

[connection signal="user_authenticated" from="PlayGamesSignInClient" to="." method="_on_play_games_sign_in_client_user_authenticated"]
[connection signal="game_loaded" from="PlayGamesSnapshotsClient" to="." method="_on_play_games_snapshots_client_game_loaded"]
[connection signal="snapshots_loaded" from="PlayGamesSnapshotsClient" to="." method="_on_play_games_snapshots_client_snapshots_loaded"]
